# GoogleAppsFinanceTracker

./: Readme.md  all_financial_dashboard.html  all_financial_response.json  all_financial_transactions.csv  all_financial_transactions.json  scratch_find_sheet.py  scratch_test.py  test_tools.py
trace/: .env.example  .gitignore  2.0  Dockerfile  README.md  __init__.py  client.py  financial_report.docx  financial_report_1777157050.docx  financial_report_1777157984.docx  financial_report_1777162828.docx  generate_secrets.py  inference.py  models.py  openenv.yaml  project_structure.md  pyproject.toml  requirements.txt  run_all_financial_gmail.py  test_api.py  test_tools.py
trace/configs/: env_config.yaml  grpo_config.yaml
trace/data/: sft_demos.jsonl  sft_demos_v2.jsonl
trace/docs/: blog_post.md
trace/notebooks/: Trace_SFT_Training_Colab.ipynb
trace/scratch/: add_test_row.py  check_all_tabs.py  check_correct_id.py  check_grid.py  check_id_3.py  check_last_edit.py  check_metadata.py  check_owner.py  check_service.py  check_tabs.py  check_token.py  check_values.py  debug_sheets.py  find_sheet.py  generate_tree.py  get_email.py  list_all_sheets.py  read_large.py  search_zomato.py  test_broad.py  test_direct.py  test_full.py  test_importlib.py  test_shim.py
trace/scripts/: evaluate.py  wandb_reward_curve_demo.py  wandb_sft_dataset_analyzer.py
trace/server/: __init__.py  app.py  requirements.txt  trace_environment.py
trace/static/: index.html
trace/training/: callbacks.py  dataset.py  export_model.py  generate_sft_data.py  train_grpo.py  train_sft.py
(+50 files in other folders)
